; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_dwarfread.c_set_cu_language.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_dwarfread.c_set_cu_language.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dieinfo = type { i32, i32 }

@language_c = common dso_local global i32 0, align 4
@cu_language = common dso_local global i32 0, align 4
@language_cplus = common dso_local global i32 0, align 4
@language_m2 = common dso_local global i32 0, align 4
@language_fortran = common dso_local global i32 0, align 4
@language_unknown = common dso_local global i32 0, align 4
@cu_language_defn = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dieinfo*)* @set_cu_language to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_cu_language(%struct.dieinfo* %0) #0 {
  %2 = alloca %struct.dieinfo*, align 8
  store %struct.dieinfo* %0, %struct.dieinfo** %2, align 8
  %3 = load %struct.dieinfo*, %struct.dieinfo** %2, align 8
  %4 = getelementptr inbounds %struct.dieinfo, %struct.dieinfo* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %16 [
    i32 135, label %6
    i32 136, label %6
    i32 132, label %8
    i32 129, label %10
    i32 131, label %12
    i32 130, label %12
    i32 137, label %14
    i32 134, label %14
    i32 133, label %14
    i32 128, label %14
  ]

6:                                                ; preds = %1, %1
  %7 = load i32, i32* @language_c, align 4
  store i32 %7, i32* @cu_language, align 4
  br label %21

8:                                                ; preds = %1
  %9 = load i32, i32* @language_cplus, align 4
  store i32 %9, i32* @cu_language, align 4
  br label %21

10:                                               ; preds = %1
  %11 = load i32, i32* @language_m2, align 4
  store i32 %11, i32* @cu_language, align 4
  br label %21

12:                                               ; preds = %1, %1
  %13 = load i32, i32* @language_fortran, align 4
  store i32 %13, i32* @cu_language, align 4
  br label %21

14:                                               ; preds = %1, %1, %1, %1
  %15 = load i32, i32* @language_unknown, align 4
  store i32 %15, i32* @cu_language, align 4
  br label %21

16:                                               ; preds = %1
  %17 = load %struct.dieinfo*, %struct.dieinfo** %2, align 8
  %18 = getelementptr inbounds %struct.dieinfo, %struct.dieinfo* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @deduce_language_from_filename(i32 %19)
  store i32 %20, i32* @cu_language, align 4
  br label %21

21:                                               ; preds = %16, %14, %12, %10, %8, %6
  %22 = load i32, i32* @cu_language, align 4
  %23 = call i32 @language_def(i32 %22)
  store i32 %23, i32* @cu_language_defn, align 4
  ret void
}

declare dso_local i32 @deduce_language_from_filename(i32) #1

declare dso_local i32 @language_def(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
